--- a/photoGrid.html
+++ b/photoGrid.html
@@ -6,7 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>David Soto Photo Grid</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
-    <link rel="stylesheet" href="photos.css">
+    <style>
+      img {
+        width: 30%;
+        height: auto;
+        object-fit: cover;
+        float: left;
+        margin: 1.66%;
+        filter: grayscale(100%);
+      }
+      img.full-color {
+        filter: none;
+      }
+      p {
+        font-family: 'Raleway', sans-serif;
+        margin-left: 1.66%;
+        font-size: 23px;
+        border-bottom: 2px solid #f1f1f1;
+        width: 30%;
+        padding-bottom: 20px;
+      }
+      span {
+        font-weight: 800;
+      }
+    </style>
   </head>
   <body>
     <p><span>DAVID</span>/SOTO</p>
