--- a/index.html
+++ b/index.html
@@ -1,49 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>David Soto Photo Grid</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,800" rel="stylesheet">
-    <style>
-      p {
-        font-family: 'Raleway', sans-serif;
-        margin-left: 1.66%;
-        font-size: 23px;
-        border-bottom: 2px solid #f1f1f1;
-        width: 30%;
-        padding-bottom: 20px;
-      }
-      span {
-        font-weight: 800;
-      }
-      img {
-        width: 30%;
-        height: auto;
-        object-fit: cover;
-        float: left;
-        margin: 1.66%;
-        filter: grayscale(100%);
-      }
-      img.full-color {
-        filter: none;
-      }
-    </style>
-  </head>
-  <body>
-    <p><span>DAVID</span>/SOTO</p>
-    <!-- Top row -->
-    <img src="https://source.unsplash.com/800x600/?nature" alt="">
-    <img src=https://source.unsplash.com/800x600/?love" alt="">
-    <img src="https://source.unsplash.com/800x600/?tech" alt="">
-    <!-- Middle row -->
-    <img src="https://source.unsplash.com/800x600/?programming" alt="">
-    <img class="full-color" src="https://source.unsplash.com/800x600/?colorful" alt="">
-    <img src="https://source.unsplash.com/800x600/?space" alt="">
-    <!-- Bottom row -->
-    <img src="https://source.unsplash.com/800x600/?hike" alt="">
-    <img src="https://source.unsplash.com/800x600/?people" alt="">
-    <img src="https://source.unsplash.com/800x600/?buildings" alt="">
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta http-equiv="X-UA-Compatible" content="ie=edge"> <title>David Soto Photo Grid</title> <style> p { font-family: Helvetica, 'Lucida Sans', Arial, sans-serif; margin-left: 1.66%; font-size: 23px; border-bottom: 2px solid #f1f1f1; width: 30%; padding-bottom: 20px; } span { font-weight: 800; } img { width: 30%; height: auto; object-fit: cover; float: left; margin: 1.66%; filter: grayscale(100%); } img.full-color { filter: none; } </style> </head> <body> <p><span>DAVID</span>/SOTO</p> <img src="https://source.unsplash.com/500x500/?nature"> <img src=https://source.unsplash.com/500x500/?love"> <img src="https://source.unsplash.com/500x500/?tech"> <img src="https://source.unsplash.com/500x500/?programming"> <img class="full-color" src="https://source.unsplash.com/500x500/?colorful"> <img src="https://source.unsplash.com/500x500/?space"> <img src="https://source.unsplash.com/500x500/?hike"> <img src="https://source.unsplash.com/500x500/?people"> <img src="https://source.unsplash.com/500x500/?buildings"> </body></html>
